<resources>
    <string name="app_name">AppOnHand</string>
    <string name="label">AppOnHand</string>
    <string name="tab_indicator_new">New</string>
    <string name="tab_indicator_rating">Ratings</string>
    <string name="tab_indicator_category">Category</string>
    <string name="tab_indicator_downloads">Manage</string>
    <string name="search_text">Search</string>
    <string name="search_hint">Input</string>
    <string name="empty">No matching content in AppOnHand</string>
    <string name="low_speed">Your network is not good enough. Please refresh, thanks!</string>
    <string name="refresh">Refresh</string>
    <string name="loading">loading...</string>
    <string name="asset_info_title">Detail</string>
    <string name="news_recommend_title">Infomation</string>
    <string name="description">Description</string>
    <string name="screenshorts">Screen Shorts</string>
    <string name="size">Size:</string>
    <string name="version">Version:</string>
    <string name="last_update">Update:</string>
    <string name="price">Price:</string>
    <string name="installing">Installing</string>
    <string name="click_to_install">Download complete, click to install</string>
    <string name="click_to_install_btn">Click to install</string>
    <string name="rate_first">Rate it first</string>
    <string name="reply_comment_first">Reply it first</string>
    <string name="comment_hint">Rate it and then add comments here</string>
    <string name="reply_comment_hint">Reply comments here</string>
    <string name="selected">Selected</string>
    <string name="app_unit">apps</string>
    <string name="too_many_app_selected">You can only install 30 apps per time.</string>
    <string name="sending_comment">Sending comment...</string>
    <string name="send_comment_error">Sorry, failed to send comment</string>
    <string name="send_comment_success">Comment was sent successfully</string>
    <string name="deleting_comment">Deleting comment...</string>
    <string name="toast_reply_comment_success">Reply successfully</string>
    <string name="toast_reply_comment_error">Sorry, failed to reply comment</string>
    <string name="error_type_title">Choose error type:</string>
    <string name="error_type_1">installation failed</string>
    <string name="error_type_2">execution failed</string>
    <string name="error_type_3">Force Close</string>
    <string name="error_type_4">Not Function As Description</string>
    <string name="error_type_5">Contains Erotic Content</string>
    <string name="error_type_6">Other</string>
    <string name="choose_error_type">Please choose the error type</string>
    <string name="report_error_error">Sorry, failed to report the error</string>
    <string name="report_error_success">Report error successfully</string>
    <string name="send_mail_title">Send mail via</string>
    <string name="back">Back</string>
    <string name="password_empty">Password is empty</string>
    <string name="error_password">Error password</string>
    <string name="card_no_empty">Card number is empty</string>
    <string name="login_server">Trying to login to server</string>
    <string name="login_fail">Sorry, connecting to login server failed</string>
    <string name="app">App</string>
    <string name="game">Game</string>
    <string name="all">All</string>
    <string name="app_by_all">Annually</string>
    <string name="app_by_month">Monthly</string>
    <string name="app_by_week">Weekly</string>
    <string name="downlods">Downloads</string>
    <string name="downlods_">Downloads:</string>
    <string name="ratings">Ratings</string>
    <string name="ratings_">Ratings:</string>
    <string name="date">Date</string>
    <string name="recommend">Recommend</string>
    <string name="new_commodity">New Commodity</string>
    <string name="guess_like">You Like</string>
    <string name="news">News</string>
    <string name="app_detail">App Detail</string>
    <string name="app_comment">Comments</string>
    <string name="relative_app">Relative Apps</string>
    <string name="guess_you_like">We guess you like:</string>
    <string name="relative_app_recommend">Users also download these applications:</string>
    <string name="daily_top_keywords">Most searched in last 24hrs:</string>
    <string name="week_top_keywords">Most searched in last week:</string>
    <string name="daily_recommend">Daily recommend</string>
    <string name="daily_search">Daily top</string>
    <string name="week_search">Week top</string>
    <string name="search_result">Search Results</string>
    <string name="more_keywords">More</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_dlg_title">Exit Confirmation</string>
    <string name="exit_dlg_msg">Do you want to exit AppOnHand?</string>
    <string name="update_or_not_dlg_title">Update Avaliable</string>
    <string name="update_or_not_dlg_msg">A new version is released, do you want to update?\n</string>
    <string name="update_notification_title">Update Avaliable</string>
    <string name="update_notification_description">%1$s: %2$s apps has new version!</string>
    <string name="report_error">Report Error</string>
    <string name="report_now">Report Now</string>
    <string name="add_comment">Add</string>
    <string name="edit_comment">Edit</string>
    <string name="all_comment">All Comments</string>
    <string name="no_screen_shorts">There is no screen shorts.</string>
    <string name="no_description">No description</string>
    <string name="app_downloading">This app is being downloaded now</string>
    <string name="app_downloading_ext">The app %1$s is being downloaded now</string>
    <string name="search_query_results">AppOnHand</string>
    <string name="search_label">Search</string>
    <string name="search_title">Search Results</string>
    <string name="free">FREE</string>
    <string name="freed">FREE</string>
    <string name="installed">Installed</string>
    <string name="launch">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="updated">Updatable</string>
    <string name="buy">Buy</string>
    <string name="canceldownload">Cancel</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="deleteapkfile">Delete APK</string>
    <string name="network_error_title">Attention</string>
    <string name="network_error_msg">A network error has occured. Retry, or cancel and return to the previous screen.</string>
    <string name="network_error_and_exit">A network error has occured. Please try later again!</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="continue_download">Continue</string>
    <string name="cancel_download">Cancel</string>
    <string name="never_alert">Never alert again.</string>
    <string name="always_alert">Show permission alert dialog(Recommended)</string>
    <string name="warning">Warning</string>
    <string name="retry">Retry</string>
    <string name="comment">Comments</string>
    <string name="anonymous">Anonymous</string>
    <string name="network_error_list_footer">No connection</string>
    <string name="security_settings_desc">This application has access to the followings:</string>
    <string name="about_developer">About the developer</string>
    <string name="view_more_apps">View more applications</string>
    <string name="send_mail">Send mail to developer</string>
    <string name="mail_address_invalid">Sorry, the developer didn\'t provide any valid emaill address</string>
    <string name="no_results_title">There are no matches in AppOnHand for the Search:</string>
    <string name="search_suggestions_title">Suggestions:</string>
    <string name="search_suggestion1">\u0020<li> Make sure all words are spelled correctly.</li>\u0020</string>
    <string name="search_suggestion2">\u0020<li> Try different keywords.</li>\u0020</string>
    <string name="search_suggestion3">\u0020<li> Try more general keywords.</li>\u0020</string>
    <string name="no_permissions">No permissions required</string>
    <string name="default_permission_group">Default</string>
    <string name="permissions_format">%1$s , %2$s</string>
    <string name="perms_hide">\u0020<b>Hide</b>\u0020</string>
    <string name="perms_show_all">\u0020<b>Show all</b>\u0020</string>
    <string name="preinstall_label">AppMix</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="select_nothing">No item selected</string>
    <string name="select_installed">Already installed</string>
    <string name="select">Select</string>
    <string name="unselect">Unselect</string>
    <string name="my_review">My review</string>
    <string name="my_comment">My comment</string>
    <string name="no_rating">No rating</string>
    <string name="rating_label">Rate it!</string>
    <string name="money_marker">$</string>
    <string name="no_comment">No comments</string>
    <string name="pre_downloading">Preparing to download</string>
    <string name="downloading">Download</string>
    <string name="dlg_ok">OK</string>
    <string name="dialog_feedback">Contact</string>
    <string name="feedback_qq1">QQ Group</string>
    <string name="feedback_qq2">52405355</string>
    <string name="feedback_mail1">Our Email Address</string>
    <string name="feedback_mail2">hello@yingyonghui.com</string>
    <string name="feedback_microblog1">t.sina.com.cn</string>
    <string name="feedback_microblog2">(at)yingyonghui</string>
    <string name="MENU_ABOUT">About</string>
    <string name="icons_settings">Icons Settings</string>
    <string name="download_settings">Download Settings</string>
    <string name="data_clean">Data Clean</string>
    <string name="display_icons">Download Icons</string>
    <string name="display_icons_on">Download icons for apps</string>
    <string name="display_icons_off">Do not download new icons for apps</string>
    <string name="buffer_icons">Buffer Icons in the phone and save money for you</string>
    <string name="buffer_icons_on">Store the icons in the phone after downloading icons</string>
    <string name="buffer_icons_off">Never the icons in the phone after downloading icons</string>
    <string name="allow_without_wifi">Allow Apps Download without Wifi</string>
    <string name="allow_without_wifi_on">Able to download apps without wifi</string>
    <string name="allow_without_wifi_off">Only download apps when you have access to wifi</string>
    <string name="app_limit">Upper Limit for Single App Download without Wifi</string>
    <string name="app_limit_summary">Set the upper limit of the app without wifi</string>
    <string name="data_clean2">Data Clean</string>
    <string name="data_clean_summary">Delete the icons and apks from the phone</string>
    <string name="data_clean_dialog_message">Are you sure to delete the icons and apks from the phone?</string>
    <string name="shortcut_settings">Shortcut Settings</string>
    <string name="create_yingyonghui_shortcut">Create Shortcut for AppOnHand</string>
    <string name="create_yingyonghui_shortcut_on">Create shortcut for AppOnHand automatically</string>
    <string name="create_yingyonghui_shortcut_off">Do not create shortcut for AppOnHand</string>
    <string name="warning_wording">The application %1$s requires permissions may leak your private information:</string>
    <string name="about_msg">A collection of mass apps\nFacilitate your phone in a moment</string>
    <string name="phone_browser">AppOnHand Browser</string>
    <string name="wap_address">m.yingyonghui.com</string>
    <string name="btn_add_comment">add a comment</string>
    <string name="btn_report_error">report an error</string>
    <string name="btn_remove_comment">delete comment</string>
</resources>