<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff5f5f5f" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="3.0dip" android:text="@string/MENU_ABOUT" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff3880bb" android:gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="85.0dip" android:text="@string/app_name" />
    <TextView android:textSize="10.0dip" android:textColor="#ff3880bb" android:gravity="top|center" android:id="@id/version_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="0.5" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff5f5f5f" android:gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/about_msg" />
    <TextView android:textSize="10.0dip" android:textColor="#ff5f5f5f" android:gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:text="@string/phone_browser" />
    <TextView android:textSize="10.0dip" android:textColor="#ff0084ff" android:gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/wap_address" />
    <Button android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff4f4f4f" android:gravity="center" android:id="@id/dialog_about_okbutton" android:background="@drawable/list_download_button" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="87.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="87.0dip" android:text="@string/dlg_ok" />
</LinearLayout>