<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0dip" android:textColor="@drawable/red" android:gravity="center" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/warning" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/black" android:id="@id/warning_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/warning_wording" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/warning_permissions_section" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:paddingLeft="6.0dip" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/security_settings_desc" />
            <LinearLayout android:orientation="vertical" android:id="@id/warning_security_settings_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </LinearLayout>
    </ScrollView>
    <CheckBox android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/black" android:id="@id/check_permission_alert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:checked="true" android:text="@string/always_alert" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.25" />
        <Button android:textColor="@drawable/black" android:id="@id/dialog_warning_okbutton" android:background="@drawable/toolbar_button_big" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/continue_download" android:layout_weight="1.0" />
        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5" />
        <Button android:textColor="@drawable/black" android:id="@id/dialog_warning_cancelbutton" android:background="@drawable/list_download_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel_download" android:layout_weight="1.0" />
        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.25" />
    </LinearLayout>
</LinearLayout>