<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@android:color/white" android:gravity="top|center" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/dialog_feedback" />
    <ScrollView android:id="@id/scrollview_feedback" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:background="#ff313131" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" />
            <RelativeLayout android:id="@id/relativelayout_qq" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/imageview_qq" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:src="@drawable/qq" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/list_item_bg" android:id="@id/textview1_feedback_qq" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_qq1" android:layout_toRightOf="@id/imageview_qq" android:layout_alignTop="@id/imageview_qq" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@drawable/list_item_bg" android:id="@id/textview2_feedback_qq" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_qq2" android:layout_toRightOf="@id/imageview_qq" android:layout_below="@id/textview1_feedback_qq" />
            </RelativeLayout>
            <View android:background="#ff313131" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" />
            <RelativeLayout android:id="@id/relativelayout_mail" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/imageview_mail" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:src="@drawable/mail" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/list_item_bg" android:id="@id/textview1_feedback_mail" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_mail1" android:layout_toRightOf="@id/imageview_mail" android:layout_alignTop="@id/imageview_mail" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@drawable/list_item_bg" android:id="@id/textview2_feedback_mail" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_mail2" android:layout_toRightOf="@id/imageview_mail" android:layout_below="@id/textview1_feedback_mail" />
            </RelativeLayout>
            <View android:background="#ff313131" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" />
            <RelativeLayout android:id="@id/relativelayout_microblog" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/imageview_microblog" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:src="@drawable/microblog" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/list_item_bg" android:id="@id/textview1_feedback_microblog" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_microblog1" android:layout_toRightOf="@id/imageview_microblog" android:layout_alignTop="@id/imageview_microblog" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@drawable/list_item_bg" android:id="@id/textview2_feedback_microblog" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_microblog2" android:layout_toRightOf="@id/imageview_microblog" android:layout_below="@id/textview1_feedback_microblog" />
            </RelativeLayout>
            <View android:background="#ff313131" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" />
        </LinearLayout>
    </ScrollView>
    <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:gravity="center" android:id="@id/dialog_feedback_okbutton" android:background="@drawable/popup_button_low" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="60.0dip" android:layout_marginBottom="5.0dip" android:text="@string/ok" />
</LinearLayout>